--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
     "authors": [
         { "name": "tsyk goto", "email": "ngyuki.ts@gmail.com" }
     ],
-    "repositories": [
-        { "packagist": false }
-    ],
     "require": {
         "php": ">=5.3.3"
+    },
+    "require-dev": {
+        "ngyuki/phake": "1.0.*"
     },
     "autoload": {
         "psr-0": {
